--- a/index.html
+++ b/index.html
@@ -132,36 +132,38 @@
                   <h3 class="list-item-title">Mark Guerrero</h3>
                   <p class="list-item-content">Product Designer</p>
                 </div>
-                <ul class="icon-list">
-                  <li class="icon-container">
-                    <a href="#" class="icon-link">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="icon-container">
-                    <a href="#">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-Group"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="icon-container">
-                    <a href="#">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="icon-container">
-                    <a href="#">
-                      <svg class="social-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                <div class="icon-list-container">
+                  <ul class="icon-list">
+                    <li class="icon-container">
+                      <a href="#" class="icon-link">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-container">
+                      <a href="#">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-Group"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-container">
+                      <a href="#">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-container">
+                      <a href="#">
+                        <svg class="social-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <li class="about-list-item">
                 <img
