--- a/index.html
+++ b/index.html
@@ -300,13 +300,15 @@
             <h2 class="section-title">Our Portfolio</h2>
             <ul class="portfolio-list">
               <li class="portfolio-list-item">
-                <img
-                  src="./images/portfolio-img/img-5.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                  class="portfolio-img-content"
-                />
+                <div class="portfolio-img-container">
+                  <img
+                    src="./images/portfolio-img/img-5.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                    class="portfolio-img-content"
+                  />
+                </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Banking App</h3>
                   <p class="list-item-content">App</p>
