--- a/index.html
+++ b/index.html
@@ -308,72 +308,117 @@
                     height="300"
                     class="portfolio-img-content"
                   />
+                  <p class="img-container-content">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Banking App</h3>
                   <p class="list-item-content">App</p>
                 </div>
               </li>
+
               <li class="portfolio-list-item">
-                <img
-                  src="./images/portfolio-img/img-4.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                  class="portfolio-img-content"
-                />
+                <div class="portfolio-img-container">
+                  <img
+                    src="./images/portfolio-img/img-4.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                    class="portfolio-img-content"
+                  />
+                  <p class="img-container-content">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Cashless Payment</h3>
                   <p class="list-item-content">Marketing</p>
                 </div>
               </li>
+
               <li class="portfolio-list-item">
-                <img
-                  src="./images/portfolio-img/img-3.jpg"
-                  alt="Laptop and mobile phone"
-                  width="360"
-                  height="300"
-                  class="portfolio-img-content"
-                />
+                <div class="portfolio-img-container">
+                  <img
+                    src="./images/portfolio-img/img-3.jpg"
+                    alt="Laptop and mobile phone"
+                    width="360"
+                    height="300"
+                    class="portfolio-img-content"
+                  />
+                  <p class="img-container-content">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Meditation App</h3>
                   <p class="list-item-content">App</p>
                 </div>
               </li>
+
               <li class="portfolio-list-item">
-                <img
-                  src="./images/portfolio-img/img-2.jpg"
-                  alt="Car salon"
-                  width="360"
-                  height="300"
-                  class="portfolio-img-content"
-                />
+                <div class="portfolio-img-container">
+                  <img
+                    src="./images/portfolio-img/img-2.jpg"
+                    alt="Car salon"
+                    width="360"
+                    height="300"
+                    class="portfolio-img-content"
+                  />
+                  <p class="img-container-content">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Taxi Service</h3>
                   <p class="list-item-content">Marketing</p>
                 </div>
               </li>
+
               <li class="portfolio-list-item">
-                <img
-                  src="./images/portfolio-img/img-1.jpg"
-                  alt="Phone backgrounds"
-                  width="360"
-                  height="300"
-                  class="portfolio-img-content"
-                />
+                <div class="portfolio-img-container">
+                  <img
+                    src="./images/portfolio-img/img-1.jpg"
+                    alt="Phone backgrounds"
+                    width="360"
+                    height="300"
+                    class="portfolio-img-content"
+                  />
+                  <p class="img-container-content">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Screen Illustrations</h3>
                   <p class="list-item-content">Design</p>
                 </div>
               </li>
+
               <li class="portfolio-list-item">
-                <img
-                  src="./images/portfolio-img/img-5.jpg"
-                  alt="Girl looking at phone"
-                  width="360"
-                  height="300"
-                  class="portfolio-img-content"
-                />
+                <div class="portfolio-img-container">
+                  <img
+                    src="./images/portfolio-img/img-5.jpg"
+                    alt="Girl looking at phone"
+                    width="360"
+                    height="300"
+                    class="portfolio-img-content"
+                  />
+                  <p class="img-container-content">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-dscr">
                   <h3 class="list-item-title">Online Courses</h3>
                   <p class="list-item-content">Marketing</p>
