--- a/index.html
+++ b/index.html
@@ -319,7 +319,6 @@
                   <p class="list-item-content">App</p>
                 </div>
               </li>
-
               <li class="portfolio-list-item">
                 <div class="portfolio-img-container">
                   <img
@@ -340,7 +339,6 @@
                   <p class="list-item-content">Marketing</p>
                 </div>
               </li>
-
               <li class="portfolio-list-item">
                 <div class="portfolio-img-container">
                   <img
@@ -361,7 +359,6 @@
                   <p class="list-item-content">App</p>
                 </div>
               </li>
-
               <li class="portfolio-list-item">
                 <div class="portfolio-img-container">
                   <img
@@ -382,7 +379,6 @@
                   <p class="list-item-content">Marketing</p>
                 </div>
               </li>
-
               <li class="portfolio-list-item">
                 <div class="portfolio-img-container">
                   <img
@@ -403,7 +399,6 @@
                   <p class="list-item-content">Design</p>
                 </div>
               </li>
-
               <li class="portfolio-list-item">
                 <div class="portfolio-img-container">
                   <img
@@ -440,7 +435,7 @@
             </p>
           </div>
           <div class="footer-social">
-            <p>Social media</p>
+            <p class="footer-social-title">Social media</p>
             <ul class="icon-list">
               <li class="icon-container">
                 <a href="#" class="icon-link">
@@ -450,21 +445,21 @@
                 </a>
               </li>
               <li class="icon-container">
-                <a href="#">
+                <a href="#" class="icon-link">
                   <svg class="social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-Group"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-container">
-                <a href="#">
+                <a href="#" class="icon-link">
                   <svg class="social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="icon-container">
-                <a href="#">
+                <a href="#" class="icon-link">
                   <svg class="social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
