--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
             <ul class="nav-list">
               <li class="nav-list-item">
-                <a href="./index.html" class="nav-link">Studio</a>
+                <a href="./index.html" class="nav-link current">Studio</a>
               </li>
               <li class="nav-list-item">
                 <a href="" class="nav-link">Portfolio</a>
